--- a/src/pages/status.module.css
+++ b/src/pages/status.module.css
@@ -64,6 +64,7 @@ button {
     display: inline-block;
     border-radius: 10px;
     font-size: 16px;
+    font-family: "Rubik";
 }
 
 button:hover {
